[package]
name = "bevy_4x_camera"
version = "0.1.2"
authors = ["Sarthak Singh <ss269@uw.edu>"]
edition = "2021"
description = "A 4X style camera for bevy"
homepage = "https://github.com/SarthakSingh31/bevy_4x_camera"
keywords = ["game", "gamedev", "camera", "bevy"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SarthakSingh31/bevy_4x_camera"

[dependencies]
bevy = "0.8"

[dev-dependencies]
rand = "0.8"
bevy_mod_picking = "0.9.0"
